# jira2simplicate

./: README.md  pyproject.toml  requirements.in
jira2simplicate/: jira_part.py
